--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "repository": "https://github.com/pavasich/twitchbot",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-env": "^2.4.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.26.0",
+    "lodash": "^4.17.4",
     "node-twitchbot": "^1.2.2",
     "tmi.js": "^1.1.2"
   }
