--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "birdofchess twitch bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js --exec @babel/node",
+    "build": "babel index -d dist",
+    "prod": "babel lib -d dist && node dist/index.js"
   },
   "author": "pavasich",
   "license": "ISC",
   "repository": "https://github.com/pavasich/twitchbot",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-env": "^2.4.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/node": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-typescript": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.0.0-beta.54",
     "lodash": "^4.17.4",
-    "node-twitchbot": "^1.2.2",
-    "tmi.js": "^1.1.2"
+    "twitch-js": "^1.2.12",
+    "webpack": "^4.16.1"
   }
 }
