--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "description": "birdofchess twitch bot",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec @babel/node",
-    "build": "babel index -d dist",
-    "prod": "babel lib -d dist && node dist/index.js"
+    "start": "nodemon index.js --exec babel-node",
+    "build": "npx babel src --out-dir dist",
+    "prod": "npx babel src --out-dir dist && node dist"
   },
   "author": "pavasich",
   "license": "ISC",
   "repository": "https://github.com/pavasich/twitchbot",
   "dependencies": {
+    "lodash": "^4.17.10",
+    "twitch-js": "^1.2.12",
+    "webpack": "^4.16.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.54",
     "@babel/core": "^7.0.0-beta.54",
     "@babel/node": "^7.0.0-beta.54",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/preset-typescript": "^7.0.0-beta.54",
-    "@babel/runtime": "^7.0.0-beta.54",
-    "lodash": "^4.17.10",
-    "twitch-js": "^1.2.12",
-    "webpack": "^4.16.1"
+    "@babel/runtime": "^7.0.0-beta.54"
   }
 }
