--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
+  "presets": ["@babel/preset-typescript", "@babel/preset-env"],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
