--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "repository": "https://github.com/pavasich/twitchbot",
   "dependencies": {
     "@types/lodash": "^4.14.112",
+    "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "lowdb": "^1.0.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "twitch-js": "^1.2.12"
   },
   "devDependencies": {
