--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "birdofchess twitch bot",
   "main": "index.js",
   "scripts": {
-    "start": "if [ \"$NODE_ENV\" = \"production\" ]; then npm run prod; else NODE_ENV=development npm run dev; fi",
-    "dev": "nodemon src --exec babel-node --extensions \".ts,.js\"",
-    "build": "npx babel src --extensions \".ts,.js\" --out-dir dist",
-    "prod": "NODE_ENV=production npx babel src --extensions \".ts,.js\" --out-dir dist && NODE_ENV=production forever dist"
+    "bot": "nodemon src/bot --exec babel-node --extensions \".ts,.js\"",
+    "bot:dev": "npm run bot",
+    "bot:prod": "NODE_ENV=production npx babel src/bot --extensions \".ts,.js\" --out-dir dist/bot && NODE_ENV=production forever dist/bot",
+    "server": "npx babel src/server --extensions \".ts,.js\" --out-dir dist/server && cp src/server/index.html dist/server/index.html && nodemon dist/server",
+    "server:dev": "npm run server",
+    "server:prod": "NODE_ENV=production npx babel src/server --extensions \".ts,.js\" --out-dir dist/server && cp src/server/index.html dist/server/index.html && NODE_ENV=production forever dist/server"
   },
   "author": "pavasich",
   "license": "ISC",
@@ -31,8 +33,11 @@
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/preset-typescript": "^7.0.0-beta.54",
     "@babel/runtime": "^7.0.0-beta.54",
+    "@types/express": "^4.16.0",
     "@types/lowdb": "^1.0.4",
     "@types/node": "^10.5.2",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "typescript": "^2.9.2"
   }
