--- a/src/bird-of-bytes/package.json
+++ b/src/bird-of-bytes/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build:bytes": "NODE_ENV=production webpack --config=./webpack.config.js",
     "bot": "nodemon src/bot --exec babel-node --extensions \".ts,.js\"",
     "bot:dev": "npm run bot",
     "bot:prod": "rm -rf dist/ && NODE_ENV=production npx babel src --extensions \".ts,.js\" --out-dir dist && NODE_ENV=production forever dist/bot",
@@ -17,19 +16,18 @@
   "license": "ISC",
   "repository": "https://github.com/pavasich/twitchbot",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@types/lodash": "^4.14.112",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.4",
-    "babel-runtime": "^6.26.0",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "graceful-fs": "^4.1.11",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "4.17.5",
     "lowdb": "^1.0.0",
-    "mini-css-extract-plugin": "^0.4.3",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
@@ -45,25 +43,25 @@
     "twitch-js": "^1.2.12",
     "url-loader": "^1.1.1",
     "validator": "^10.8.0",
-    "webpack": "^3.12.0",
+    "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
-    "whatwg-fetch": "^2.0.3",
     "write-file-webpack-plugin": "^4.4.1",
+    "babel-runtime": "^6.26.0",
+    "lodash": "4.17.5",
+    "whatwg-fetch": "^2.0.3",
     "ws": "1.1.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/node": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/polyfill": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-typescript": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.0.0-beta.54",
     "@types/express": "^4.16.0",
     "@types/lowdb": "^1.0.4",
     "@types/node": "^10.5.2",
