--- a/package.json
+++ b/package.json
@@ -17,25 +17,24 @@
   "license": "ISC",
   "repository": "https://github.com/pavasich/twitchbot",
   "dependencies": {
-    "@types/lodash": "^4.14.112",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.4",
     "babel-runtime": "^6.26.0",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "graceful-fs": "^4.1.11",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "4.17.5",
     "lowdb": "^1.0.0",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "postcss-reporter": "^6.0.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-draggable": "^3.0.5",
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.7",
@@ -45,7 +44,7 @@
     "twitch-js": "^1.2.12",
     "url-loader": "^1.1.1",
     "validator": "^10.8.0",
-    "webpack": "^3.12.0",
+    "webpack": "^4.5.0",
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "whatwg-fetch": "^2.0.3",
@@ -65,10 +64,12 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@types/express": "^4.16.0",
+    "@types/lodash": "^4.14.112",
     "@types/lowdb": "^1.0.4",
+    "@types/mini-css-extract-plugin": "^0.8.0",
     "@types/node": "^10.5.2",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "typescript": "^2.9.2",
     "webpack-cli": "^3.1.1"
