feat(channel-points)

--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     "redux-saga": "^0.16.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "twitch": "^4.3.8",
+    "twitch-auth": "^4.3.8",
+    "twitch-chat-client": "^4.3.8",
     "twitch-js": "^1.2.12",
+    "twitch-pubsub-client": "^4.3.8",
+    "twitch-webhooks": "^4.3.8",
     "url-loader": "^1.1.1",
     "validator": "^10.8.0",
     "webpack": "^4.5.0",
