--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "lowdb": "^1.0.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-fetch": "^1.7.3",
-    "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
     "postcss-reporter": "^6.0.0",
     "react": "^16.9.0",
@@ -39,12 +38,10 @@
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.7",
     "redux-saga": "^0.16.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
     "twitch": "^4.3.8",
     "twitch-auth": "^4.3.8",
     "twitch-chat-client": "^4.3.8",
-    "twitch-js": "^1.2.12",
+    "twitch-js": "^2.0.0-beta.43",
     "twitch-pubsub-client": "^4.3.8",
     "twitch-webhooks": "^4.3.8",
     "url-loader": "^1.1.1",
